fix: don't wrap codeblocks

--- a/packages/web/src/styles/globals.css
+++ b/packages/web/src/styles/globals.css
@@ -29,9 +29,3 @@
   background-color: rgba(0, 0, 0, 0);
   border-color: transparent;
 }
-
-code[class*='language-'],
-pre[class*='language-'] {
-  white-space: normal !important;
-  word-break: break-word !important;
-}
